# unison-mcp-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  claude_config_example.json  code_quality_checks.ps1  code_quality_checks.sh  communication_simulator_test.py  config.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run-server.ps1  run-server.sh  run_integration_tests.ps1  run_integration_tests.sh  server.py  unison-mcp-server
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  tool_addition.yml
.github/workflows/: docker-pr.yml  docker-release.yml  litellm-refresh.yml  test.yml
clink/: constants.py  models.py  registry.py
clink/agents/: __init__.py  aider.py  amp.py  base.py  claude.py  codex.py  crush.py  gemini.py  opencode.py
clink/parsers/: __init__.py  aider.py  amp.py  crush.py  opencode.py
conf/: __init__.py  azure_models.json  custom_models.json  dial_models.json  gemini_models.json  openai_models.json  openrouter_models.json  prompt_templates.py  xai_models.json
conf/cli_clients/: aider.json  amp.json  crush.json  opencode.json
docker/: README.md
docker/scripts/: build.ps1  build.sh  deploy.ps1  deploy.sh  healthcheck.py
docs/: adding_providers.md  adding_tools.md  advanced-usage.md  azure_openai.md  configuration.md  context-revival.md  contributions.md  custom_models.md  docker-deployment.md  gemini-setup.md  getting-started.md  index.md  locale-configuration.md  name-change.md  troubleshooting.md  wsl-setup.md
docs/mockup-scenes/: README.md  clink-subagent.yaml  gallery-api-lookup-after.yaml  gallery-api-lookup-before.yaml  gallery-challenge-after.yaml  gallery-challenge-before.yaml  gallery-chat.yaml  gallery-consensus.yaml  gallery-precommit.yaml  hero.yaml
docs/tools/: apilookup.md  challenge.md  chat.md  clink.md  consensus.md  docgen.md  listmodels.md  planner.md  precommit.md  refactor.md  testgen.md  tracer.md  version.md
examples/: claude_config_macos.json  claude_config_wsl.json
handlers/: __init__.py  prompt_handlers.py  tool_handlers.py
openspec/changes/archive/2026-04-03-data-driven-model-selection/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-03-litellm-model-discovery/: design.md  proposal.md  tasks.md
openspec/changes/resilient-test-assertions/: design.md  proposal.md  tasks.md
providers/: __init__.py  base.py  configure.py  gemini.py  litellm_adapter.py  openai.py  openai_compatible.py  openrouter.py  registry.py  xai.py
providers/registries/: base.py
providers/shared/: model_capabilities.py
scripts/: build_mockups.py  build_mockups_template.svg.j2  refresh_litellm_models.py  smoke_test_wheel.py
scripts/fonts/: JetBrainsMono-subset.b64
simulator_tests/: __init__.py  base_test.py  conversation_base_test.py  test_per_tool_deduplication.py
systemprompts/: analyze_prompt.py
systemprompts/clink/: codex_codereviewer.txt  default.txt  default_codereviewer.txt  default_planner.txt
tests/: __init__.py  conftest.py  model_test_helpers.py  test_alias_target_restrictions.py  test_async_provider.py  test_auto_mode.py  test_auto_mode_comprehensive.py  test_auto_mode_custom_provider_only.py  test_auto_mode_model_listing.py  test_auto_mode_provider_selection.py  test_auto_model_planner_fix.py  test_buggy_behavior_prevention.py  test_build_mockups.py  test_chat_codegen_integration.py  test_chat_cross_model_continuation.py  test_chat_openai_integration.py  test_circuit_breaker.py  test_clink_aider_smoke.py  test_clink_amp_smoke.py  test_clink_crush_smoke.py  test_clink_opencode_agent.py  test_clink_opencode_parser.py  test_clink_read_only.py  test_clink_recursion_guard.py  test_clink_runtime_model.py  test_clink_tool.py  test_clink_transport.py  test_collaboration.py  test_consensus_integration.py  test_context_reconstructor.py  test_conversation_field_mapping.py  test_conversation_file_features.py  test_conversation_handler.py  test_conversation_memory.py  test_conversation_store.py  test_custom_provider.py  test_directory_expansion_tracking.py  test_docker_claude_desktop_integration.py  test_docker_config_complete.py  test_docker_implementation.py  (+50 more)
tools/: __init__.py  analyze.py  clink.py  codereview.py  consensus.py  listmodels.py  registry.py  thinkdeep.py  version.py
tools/shared/: __init__.py  base_models.py  base_tool.py  conversation_handler.py  exceptions.py  file_processor.py  model_schema_builder.py  response_formatter.py  schema_builders.py
tools/simple/: __init__.py  base.py
tools/workflow/: __init__.py  workflow_mixin.py
utils/: __init__.py  circuit_breaker.py  client_info.py  context_reconstructor.py  conversation_memory.py  conversation_store.py  env.py  file_utils.py  fs_snapshot.py  image_utils.py  logging_setup.py  model_context.py  model_resolution.py  model_restrictions.py  request_helpers.py  sqlite_storage.py  storage_backend.py  streaming.py  token_utils.py  tool_execution_context.py
(+8 files in other folders)
