[project]
name = "unison-mcp-server"
version = "11.5.0"
description = "AI-powered MCP server with multiple model providers"
license = "AGPL-3.0"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "google-genai>=1.19.0",
    "openai>=1.55.2",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["tools*", "providers*", "systemprompts*", "utils*", "conf*", "clink*"]

[tool.setuptools]
py-modules = ["server", "config"]

[tool.setuptools.package-data]
"*" = [
    "conf/*.json",
    "conf/cli_clients/*.json",
    "systemprompts/clink/*.txt",
]

[tool.setuptools.data-files]
"conf" = [
    "conf/custom_models.json",
    "conf/openrouter_models.json",
    "conf/azure_models.json",
    "conf/openai_models.json",
    "conf/gemini_models.json",
    "conf/xai_models.json",
    "conf/dial_models.json",
]

[project.scripts]
unison-mcp-server = "server:run"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.unison_venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_glob = ["venv/*", ".venv/*", ".unison_venv/*"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # exception handling with raise from
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]
"tests/conftest.py" = ["E402"]  # Module level imports not at top of file - needed for test setup

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
version_source = "tag"
version_pattern = "v(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
major_on_zero = false
build_command = "python -m pip install --upgrade build && python -m build"
dist_path = "dist/"
upload_to_vcs_release = true
upload_to_repository = false
remove_dist = false
commit_version_number = true
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "simulator_tests/*",
    "communication_simulator_test.py",
    "venv/*",
    ".unison_venv/*",
    "__pycache__/*",
    "setup.py",
    "conftest.py",
    "tests/conftest.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

# -- Mypy (gradual strictness) ------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true
check_untyped_defs = false
# Permissive defaults — most code is not yet strictly typed
disallow_untyped_defs = false
follow_imports = "silent"

# Strict allowlist: recently written, well-typed modules
[[tool.mypy.overrides]]
module = [
    "utils.circuit_breaker",
    "utils.fs_snapshot",
    "utils.tool_execution_context",
    "utils.token_utils",
    # Tier 1: zero errors
    "providers.shared.provider_type",
    "providers.shared.model_response",
    "utils.file_types",
    "utils.security_config",
    "utils.conversation_memory",
    # Tier 2: one-fix files
    "utils.env",
    "utils.model_resolution",
    "utils.request_helpers",
    "utils.image_utils",
    "utils.context_reconstructor",
    "utils.file_utils",
]
follow_imports = "normal"
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
warn_return_any = true

# Third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "mcp.*",
    "litellm.*",
    "google.*",
    "dotenv.*",
    "clink.*",
    "pydantic.*",
    "tiktoken.*",
    "httpx.*",
    "openai.*",
]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"
